[package]
name = "lru"
description = "Proof-of-concept sharded LRU using channels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"

[dev-dependencies]
ahash = "0.8"
criterion = { version = "0.3", features = ["async_tokio", "html_reports"] }
quick_cache = "0.4"
moka = { version = "0.12", features = ["future", "sync"]}
rand = "0.8"
tokio = { version = "1.34", features = ["full"] }

[[bench]]
name = "cache"
harness = false
